<resources>
    <string name="app_name">Flowers</string>
    <string name="description_format">%1$s\n\n%2$s</string>
    <string name="add_item">Add Item</string>
    <string name="add_new_item_dialog_title">Add New Item</string>
    <string name="edit_item_dialog_title">Edit Item</string>
    <string name="save_button">Save</string>
    <string name="button_edit">Edit</string>
    <string name="flower_name">Flower name</string>
    <string name="last_watering">Last watering</string>
    <string name="frequency">Frequency</string>
    <string name="Add_flower">Add flower!</string>
    <string name="water">Water this plant</string>
    <string name="delete">Delete this plant</string>
    <string name="last_watering_was_on_x">Last watering was on </string>
    <string name="last_watering_was_on">Last watering was on</string>
</resources>