<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="flowerModel"
            type="com.example.flowers.FlowerModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="RtlHardcoded">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:text="@{flowerModel.name}"
                android:textSize="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/last_watering_was_on"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="0.05"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/description2"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{flowerModel.lastWaterning.toString()}"
                app:layout_constraintTop_toBottomOf="@+id/description"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/frequency"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/watering_frequency"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/frequency2"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/frequency2"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="84dp"
                android:gravity="center"
                android:text="@{String.valueOf(flowerModel.frequency)}"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/water"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/water"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:onClick="water"
                android:text="@string/water"
                app:layout_constraintBottom_toTopOf="@+id/delete"

                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:onClick="delete"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>